# mcabber_mnotify

./: CMakeLists.txt  LICENSE  README.md  mnotify.c  notify.avv  notify.avv.in
